--- a/style.css
+++ b/style.css
@@ -145,3 +145,15 @@
   .winner {
     animation: rainbow 4s infinite linear;
   }
+
+  @media only screen and (max-width: 600px) {
+    .brand {
+      font-size: 40px;
+    }
+
+    .scoreboard {
+      margin: 10px auto;
+    }
+
+
+  }
